# krypton

./: .mailmap  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
docs/: ADR-001-Vite-Integration.md
electron-app/: .gitignore  README.md  blocklist.json  eslint.config.mjs  main.js  package-lock.json  package.json  playwright.config.js  pqc-engine.js  preload.js  vite.config.js
electron-app/.husky/: pre-commit
electron-app/docs/: ADR-002-PQC-Engine.md
electron-app/native/: CMakeLists.txt
electron-app/native/src/: krypton_pqc_addon.cc
electron-app/public/assets/fonts/: fonts.css
electron-app/public/pages/: history.html  pqc_security.css  pqc_security.html  pqc_security.js
electron-app/src/js/: utils.js
electron-app/src/main/: main.js  pqc-certificate-validator.js  pqc-engine.js  pqc-handshake-service.js  pqc-session-service.js  preload-webview.js  preload.js
electron-app/src/renderer/: browser-chrome.css  browser-chrome.js  index.html
electron-app/src/renderer/js/: utils.js
electron-app/tests/: blocklist.test.js  e2e.spec.js  pqc-engine.test.js
electron-app/tests/e2e/: amnesia.spec.js  e2e.spec.js
electron-app/tests/unit/: blocklist.test.js  pqc-certificate-validator.test.js  pqc-engine.test.js  pqc-handshake-service.test.js  pqc-session-service.test.js
native-core/chrome/browser/resources/pqc_security/: pqc_security.css  pqc_security.js
native-core/chrome/common/: pqc_chrome_constants.h
native-core/components/pqc_sessions/: BUILD.gn  pqc_session_db.cc  pqc_session_service.h
native-core/components/pqc_sessions/db/: schema_version.h
native-core/net/cert/: pqc_indigenous_trust_store.cc
native-core/net/pqc/: pqc_handshake_state_machine.h  pqc_key_manager.cc  pqc_key_manager.h  pqc_session_record.h
native-core/net/pqc/test/: pqc_benchmark.cc  pqc_kat_test.cc
native-core/net/ssl/: pqc_hybrid_kdf.cc  pqc_hybrid_kdf.h
src/chrome/browser/resources/pqc_security/: pqc_security.html
src/components/pqc_sessions/: pqc_session_db.h  pqc_session_service.cc
src/components/pqc_sessions/db/: schema.sql
src/net/cert/: pqc_certificate_validator.h  pqc_indigenous_trust_store.h
src/net/pqc/: BUILD.gn  pqc_handshake_state_machine.cc  pqc_session_record.cc  quantum_security_module.cc  quantum_security_module.h
src/net/pqc/test/: pqc_handshake_test.cc
src/services/network/public/mojom/: pqc_security.mojom
